<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/anuncio"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="500dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primario"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="8dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutTitulo"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        android:paddingBottom="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <TextView
            android:id="@+id/txtAnuncioTituloLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/titulo_anuncio"
            android:textSize="24sp"
            android:textColor="@color/branco">
        </TextView>

        <TextView
            android:id="@+id/txtDetalhesArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/txtAnuncioTituloLayout"
            android:text="@string/area"
            android:textSize="12sp"
            android:textColor="@color/branco">
        </TextView>

        <TextView
            android:id="@+id/txtLblLocal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtDetalhesArea"
            android:text="@string/local_lbl"
            android:textSize="12sp"
            android:textColor="@color/branco">
        </TextView>

        <TextView
            android:id="@+id/txtDetalhesLocal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            app:layout_constraintStart_toEndOf="@id/txtLblLocal"
            app:layout_constraintTop_toBottomOf="@+id/txtDetalhesArea"
            android:text="@string/local"
            android:textSize="12sp"
            android:textColor="@color/branco">
        </TextView>

        <TextView
            android:id="@+id/txtLblRemuneracao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtDetalhesLocal"
            android:text="@string/lbl_remuneracao"
            android:textSize="12sp"
            android:textColor="@color/branco">
        </TextView>

        <TextView
            android:id="@+id/txtDetalhesRemuneracao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            app:layout_constraintStart_toEndOf="@id/txtLblRemuneracao"
            app:layout_constraintTop_toBottomOf="@+id/txtDetalhesLocal"
            android:text="@string/remuneracao"
            android:textSize="12sp"
            android:textColor="@color/branco">
        </TextView>

        <TextView
            android:id="@+id/txtLblAnunciante"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtDetalhesRemuneracao"
            android:text="@string/lbl_anunciante"
            android:textSize="12sp"
            android:textColor="@color/branco">
        </TextView>

        <TextView
            android:id="@+id/txtDetalhesAnunciante"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            app:layout_constraintStart_toEndOf="@id/txtLblAnunciante"
            app:layout_constraintTop_toBottomOf="@+id/txtDetalhesRemuneracao"
            android:text="@string/anunciante"
            android:textSize="12sp"
            android:textColor="@color/branco">
        </TextView>

        <TextView
            android:id="@+id/txtDetalhesDtI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtDetalhesAnunciante"
            android:text="@string/dti"
            android:textSize="12sp"
            android:textColor="@color/branco">
        </TextView>

        <TextView
            android:id="@+id/txtDetalhesDtF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/detalhesEntreData"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtDetalhesAnunciante"
            android:text="@string/dtf"
            android:textSize="12sp"
            android:textColor="@color/branco">
        </TextView>

        <TextView
            android:id="@+id/detalhesEntreData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/txtDetalhesAnunciante"
            app:layout_constraintStart_toEndOf="@id/txtDetalhesDtI"
            android:layout_marginStart="8dp"
            android:textColor="@color/branco"
            android:text=" - "
            android:textSize="12sp"
            >
        </TextView>

        <TextView
            android:id="@+id/txtDescricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="60dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/txtDetalhesDtF"
            android:text="@string/descricao"
            android:textSize="14sp"
            android:textColor="@color/branco">
        </TextView>

        <Button
            android:id="@+id/btnDetalhes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtDescricao"
            android:text="@string/detalhes"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textSize="16sp"
            android:textColor="@color/branco"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"



            android:backgroundTint="@color/secundario"
            android:background="@drawable/rounded_corner"
            >
        </Button>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

