<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    tools:context=".Controller.LoginActivity"
    android:background="@color/primario">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <Button
            android:id="@+id/btnAnuncioVoltar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@null"
            android:minHeight="?attr/actionBarSize"
            android:padding="@dimen/appbar_padding"
            android:text="@string/btnVoltar"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
            android:textColor="@color/branco"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:background="@color/primario"
        android:layout_gravity="center_vertical">

        <TextView
            android:id="@+id/txtAnuncioTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo_anuncio"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/branco"
            android:layout_marginStart="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
            android:id="@+id/btnDeletaAnuncio"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="16dp"
            android:backgroundTint="@color/secundario"
            android:background="@drawable/circular_btn"

            android:text="X"
            android:textSize="30sp"
            android:textColor="@color/branco"
            android:gravity="center"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/top_round_corner"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/branco"
            android:padding="32dp">

            <TextView
                android:id="@+id/txtAnuncioAnunciante"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/anunciante"
                android:textSize="14sp"
                android:layout_marginTop="8dp"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtAnuncioArea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/rea_de_conhecimento"
                android:textSize="14sp"
                android:layout_marginTop="8dp"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtAnuncioAnunciante" />

            <TextView
                android:id="@+id/txtAnuncioEmailLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/email"
                android:textSize="14sp"
                android:layout_marginTop="8dp"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtAnuncioArea" />

            <TextView
                android:id="@+id/txtAnuncioEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginStart="2dp"
                app:layout_constraintStart_toEndOf="@id/txtAnuncioEmailLbl"
                android:text="@string/email"
                android:textSize="14sp"
                android:layout_marginTop="8dp"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtAnuncioArea" />

            <TextView
                android:id="@+id/txtAnuncioTelefoneLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/telefone"
                android:textSize="14sp"
                android:layout_marginTop="8dp"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtAnuncioEmail" />

            <TextView
                android:id="@+id/txtAnuncioTelefone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginStart="2dp"
                app:layout_constraintStart_toEndOf="@id/txtAnuncioTelefoneLbl"
                android:text="@string/telefone"
                android:textSize="14sp"
                android:layout_marginTop="8dp"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtAnuncioEmail" />

            <TextView
                android:id="@+id/txtAnuncioLocalLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cidade"
                android:textSize="14sp"
                android:layout_marginTop="8dp"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtAnuncioTelefone"
                />

            <TextView
                android:id="@+id/txtAnuncioLocal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cidade"
                android:textSize="14sp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="2dp"
                app:layout_constraintStart_toEndOf="@id/txtAnuncioLocalLbl"
                app:layout_constraintTop_toBottomOf="@+id/txtAnuncioTelefone"
                />

            <TextView
                android:id="@+id/txtAnuncioRemuneracaoLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/remunera_o"
                android:textSize="14sp"
                android:layout_marginTop="8dp"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtAnuncioLocal"
                />

            <TextView
                android:id="@+id/txtAnuncioRemuneracao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginStart="2dp"
                app:layout_constraintStart_toEndOf="@id/txtAnuncioRemuneracaoLbl"
                android:text="@string/remunera_o"
                android:textSize="14sp"
                android:layout_marginTop="8dp"

                app:layout_constraintTop_toBottomOf="@+id/txtAnuncioLocal"
                />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutDatas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                app:layout_constraintTop_toBottomOf="@+id/txtAnuncioRemuneracao"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                >

                <TextView
                    android:id="@+id/txtAnuncioDti"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/dti"
                    android:textSize="14sp"

                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <TextView
                    android:id="@+id/txtMeioData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/meioData"
                    android:textSize="14sp"
                    android:layout_marginStart="5dp"

                    app:layout_constraintStart_toEndOf="@+id/txtAnuncioDti"

                    app:layout_constraintTop_toTopOf="parent"
                    />

                <TextView
                    android:id="@+id/txtAnuncioDtf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/dti"
                    android:textSize="14sp"

                    android:layout_marginStart="5dp"
                    app:layout_constraintStart_toEndOf="@+id/txtMeioData"
                    app:layout_constraintTop_toTopOf="parent"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/txtAnuncioDescricao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/descri_o"
                android:textSize="14sp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutDatas" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</LinearLayout>