<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/primario">

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.280"


        android:text="@string/appNome"
        android:textSize="45sp"
        android:textStyle="bold"
        android:textColor="@color/branco"
        />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/Title_activity_login"
        android:paddingStart="47dp"
        android:paddingEnd="47dp"
        android:textSize="16sp"
        android:textColor="@color/branco"
        app:layout_constraintTop_toBottomOf="@+id/txtTitulo"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="190dp"


        android:backgroundTint="@color/secundario"
        android:background="@drawable/rounded_corner"

         />

    <Button
        android:id="@+id/btnCadastro"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/criar_conta"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textSize="16sp"
        android:textColor="@color/branco"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_margin="8dp"


        android:backgroundTint="@color/secundario"
        android:background="@drawable/rounded_corner"/>


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>